share on social media

--- a/client/src/components/styles/elements.scss
+++ b/client/src/components/styles/elements.scss
@@ -674,6 +674,7 @@ button.pill {
 div {
   form,
   .batchItemPreview,
+  .publish.fill,
   .shop {
     & + .spinnerContainer {
       z-index: 500;
